--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -308,7 +308,7 @@
   Dieses Dokument wurde als Skript für die auf der
   Titelseite genannte Vorlesung erstellt und wird jetzt im Rahmen des
   Projekts
-  „\href{http://www.minet.uni-jena.de/~joergs/skripte/}
+  ?\href{http://www.minet.uni-jena.de/~joergs/skripte/}
   {Vorlesungsskripte der Fakultät für Mathematik}
   \href{http://www.minet.uni-jena.de/~joergs/skripte/}{und Informatik}“
   weiter betreut. Das
@@ -401,8 +401,8 @@ Beispiele für Aussagen:
  \item Jena liegt an der Saale \emph{oder} die Straße ist nicht nass.
 \end{itemize}
 
-\textit{Vorsicht:} Umgangssprachlich versteht man unter „oder“ oft ein
-„entweder \ldots oder“ (genau eine der beiden Aussagen gilt), in der
+\textit{Vorsicht:} Umgangssprachlich versteht man unter ?oder“ oft ein
+?entweder \ldots oder“ (genau eine der beiden Aussagen gilt), in der
 Logik ist es aber auch möglich, dass beide Teilaussagen wahr sind.
 
 \emph{Implikation} zweier Aussagen:
@@ -466,8 +466,8 @@ auch als Variablen genommen werden.
 \end{bemerk}
 
 Jede Variable einer aussagenlogischen Formel kann einen der
-\emph[indexrand=Wahrheitswert]{Wahrheitswerte} $w$ („\emph{wahr}“, $T$, 1) oder $f$
-(„\emph{falsch}“, $F$, 0) annehmen. Der Wahrheitswert einer
+\emph[indexrand=Wahrheitswert]{Wahrheitswerte} $w$ (?\emph{wahr}“, $T$, 1) oder $f$
+(?\emph{falsch}“, $F$, 0) annehmen. Der Wahrheitswert einer
 zusammengesetzen Formel ergibt sich aus den Wahrheitswerten ihrer Teile.
 
 \begin{table}[h]
@@ -1106,14 +1106,14 @@ $\alpha\rightarrow\gamma$ wahr ist, dann muss auch $\gamma$ wahr sein.
 
   \begin{proof}
     \begin{mdescription}
-      \item[„$\Leftarrow$“] Es gelte $\Gamma \Lvdash
+      \item[?$\Leftarrow$“] Es gelte $\Gamma \Lvdash
       \alpha\rightarrow\beta$. Nimmt man zusätzlich $\alpha$ zur Menge
       $\Gamma$ hinzu, gilt $\Gamma, \alpha \Lvdash \alpha$
       und $\Gamma, \alpha \Lvdash \alpha\rightarrow\beta$.
       Daraus kann man mittels Anwendung von modus ponens: $\Gamma,\alpha
       \Lvdash \beta$ zeigen.
 
-     \item[„$\Rightarrow$“] Es gelte $\Gamma, \alpha \Lvdash \beta$.
+     \item[?$\Rightarrow$“] Es gelte $\Gamma, \alpha \Lvdash \beta$.
 
       Wir führen eine Induktion über die Länge $k$ des Beweises von
       $\beta$ aus $\Gamma,\alpha$.
@@ -1376,8 +1376,8 @@ Nocheinmal als Zusammenfassung alle gezeigten Theoreme:
 
 \subsection{Vollständigkeit von \texorpdfstring{$\mathrm{L}$}{L}}
 
-„Vollständigkeit von $\mathrm{L}$“ bedeutet, dass jede aussagenlogische
-Tautologie ein Theorem von $\mathrm{L}$ ist. („Korrektheit von
+?Vollständigkeit von $\mathrm{L}$“ bedeutet, dass jede aussagenlogische
+Tautologie ein Theorem von $\mathrm{L}$ ist. (?Korrektheit von
 $\mathrm{L}$“ wiederum bedeutet: jedes Theorem von $\mathrm{L}$ ist eine
 aussagenlogische Tautologie. -- \autoref{satz:1})
 
@@ -1667,8 +1667,8 @@ $\mathcal{A}_{1}=\{\neg A, B\}, \mathcal{A}_{2}=\{\neg A,B\},
     $\phi$ ist eine aussagenlogische Tautologie \gdw $\Lvdash
     \phi$.
   \end{center}
-  „Tautologie“ ist ein semantischer Ausdruck und
-  „$\Lvdash$“ ist ein syntaktischer Ausdruck
+  ?Tautologie“ ist ein semantischer Ausdruck und
+  ?$\Lvdash$“ ist ein syntaktischer Ausdruck
 \end{description}
 
 \section{Resolution}
@@ -1762,9 +1762,9 @@ Verfahren für die Umformung verwenden.
 
   \todo{wahrheitstabelle für $c_{4}\leftrightarrow c_{0}\rightarrow c_{3}$}
 
-  Jede „kleine“ Äquivalenz aus 3~Variablen hat eine konjunktive
+  Jede ?kleine“ Äquivalenz aus 3~Variablen hat eine konjunktive
   Normalform aus höchstens 8~Klauseln zu je 3~Literalen. Für jedes
-  Verknüpfungszeichen von $\phi$ enthält $\phi'$ eine „kleine“
+  Verknüpfungszeichen von $\phi$ enthält $\phi'$ eine ?kleine“
   Äquivalenz. Also ist $\abs{\phi'} \leq k\cdot\abs{\phi}$ für eine
   Konstante $k$.
 \end{bsp}
@@ -2064,7 +2064,7 @@ Diese Widerlegungen sind in \autoref{zweiwiderlegungen} dargestellt.
 \caption{Widerlegungen von $S^A$ und $S^{\neg A}$}\label{zweiwiderlegungen}
 \end{figure}
 %
-Die „Blätter“ der beiden Bäume in \autoref{zweiwiderlegungen}
+Die ?Blätter“ der beiden Bäume in \autoref{zweiwiderlegungen}
 sind Klauseln aus $S^A$ bzw. Klauseln aus $S^{\lneg A}$.
 Nun fügen wir in alle Blätter, die nicht durch Klauseln in $S$
 beschriftet sind,
@@ -2230,10 +2230,10 @@ Optimierungen:
 
 Es gibt Klauselmengen, deren Resolutionswiderlegungen exponentiell lang sind.
 Ein Beispiel dafür sind die
-Taubenschlagformeln $PHP_{k}$ („pigeon hole principle“ für $k$
+Taubenschlagformeln $PHP_{k}$ (?pigeon hole principle“ für $k$
 Tauben) -- in einem Taubenschlag mit $k-1$ Löchern können nicht $k$
 Tauben sitzen, wenn in jedem Loch höchstens eine Taube sitzen darf.
-Variable $A_{i,j}$ entspricht „Taube $j$ sitzt in Loch $i$“
+Variable $A_{i,j}$ entspricht ?Taube $j$ sitzt in Loch $i$“
 ($i=1,2,\ldots,k; j=1,2,\ldots,k-1$).
 Die Formeln bestehen aus zwei Teilen.
 Der erste Teil drückt aus, dass jede Taube in (mindestens) einem Loch sitzt,
@@ -2306,7 +2306,7 @@ muss also $S$ am Ende des Beweises stehen.
 Alle Beweise beginnen also mit der Klauselmenge, die nur aus der leeren Klausel besteht
 (einziges Axiom).
 Diese Klauselmenge ist unerfüllbar.
-Durch die Schlussregel (Res) wird ein Resolutionsschritt „rückwärts“
+Durch die Schlussregel (Res) wird ein Resolutionsschritt ?rückwärts“
 ausgeführt,
 und durch (Einf) wird eine beliebige zusätzliche Klausel in die Klausel in
 die Klauselmenge eingfügt.
@@ -2369,10 +2369,10 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
 
   Sprachliche Mittel:
   \begin{itemize}
-   \item Eigenschaft $M(x,y)$ mit der Bedeutung „$x$ mag $y$“
-   \item Individuen $a$ bedeutet „ich“, $b$ bedeutet „meine Frau“ und
-    $c$ bedeutet „Peter“
-   \item Quantoren über Variablen: $\forall x\colon P(x)$ heißt „für alle $x$
+   \item Eigenschaft $M(x,y)$ mit der Bedeutung ?$x$ mag $y$“
+   \item Individuen $a$ bedeutet ?ich“, $b$ bedeutet ?meine Frau“ und
+    $c$ bedeutet ?Peter“
+   \item Quantoren über Variablen: $\forall x\colon P(x)$ heißt ?für alle $x$
     gilt Eigenschaft $P$“ (im Bsp.: $\forall x\colon M(x,a) \rightarrow M(x,b)$)
   \end{itemize}
 \end{bsp}
@@ -2397,7 +2397,7 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
 \begin{defini}[Quantoren]
   \index{Quatoren}
   $\forall$ bezeichnet man als \emph{Allquantor} und $\exists$ als
-  \emph{Existenzquantor}. $\exists x\ P(x)$ bedeutet „es gibt
+  \emph{Existenzquantor}. $\exists x\ P(x)$ bedeutet ?es gibt
   (mindestens) ein $x$ für das $P(x)$ gilt.“
 \end{defini}
 
@@ -2407,7 +2407,7 @@ und dass jede unerfüllbare Klauselmenge einen Beweis besitzt
   Also gibt es Tiere, die laufen können & $\exists x\colon T(x) \wedge L(x)$
 \end{tabular}
 
-Die „Sprache“ der Theorien 1.\,Ordnung:
+Die ?Sprache“ der Theorien 1.\,Ordnung:
 \begin{description}
  \item[Zeichen:] logische Verknüpfungszeichen wie $\neg$, $\rightarrow$,
   $\wedge$, $\vee$, $\leftrightarrow$,\\
@@ -2446,7 +2446,7 @@ Die „Sprache“ der Theorien 1.\,Ordnung:
     abkürzende Schreibweise gebraucht werden. $(\exists x_{i} \alpha)$
     ist Abkürzung für $(\neg (\forall x_{i} (\neg \alpha)))$]}
 
-    „Überflüssige“ Klammern können zur Vereinfachung der Schreibweise
+    ?Überflüssige“ Klammern können zur Vereinfachung der Schreibweise
     weggelassen werden.
   \end{enumerate}
 \end{defini}
@@ -2460,7 +2460,7 @@ Die „Sprache“ der Theorien 1.\,Ordnung:
 \end{bsp}
 
 In $(\forall x_{i} \alpha)$ ist $\alpha$ der \emph{Gültigkeitsbereich}
-des Quantors „$\forall x_{i}$.“ Eine Variable $y$, die im
+des Quantors ?$\forall x_{i}$.“ Eine Variable $y$, die im
 Gültigkeitsbereich eines Quantors $\forall y$ liegt oder die Teil des
 Quantors sind, heißt \emph[index=Variable!gebundene]{gebunden}. Falls
 eine Variable nicht gebunden ist, dann heißt sie
@@ -2634,7 +2634,7 @@ falls jede Formel in $\Gamma$ wahr unter $\cM$ ist.
 \end{itemize}
 \end{defini}
 
-Schreibweise für „$\alpha$ ist wahr unter $\cM$“: ~~~$\Mmodels ~\alpha$ .
+Schreibweise für ?$\alpha$ ist wahr unter $\cM$“: ~~~$\Mmodels ~\alpha$ .
 
 
 Wichtige Eigenschaften von Formeln
@@ -3273,8 +3273,8 @@ Das gleiche gilt für
 jeder beliebige Theorie 1.\,Ordnung.
 
 \begin{figure}
-  \todo{Bild von Menge aller Formeln, die geteilt wird in „die von $K$ beweisbare
-    Formeln“ und „nicht in $K$ beweisbare Formeln“. In erster ist
+  \todo{Bild von Menge aller Formeln, die geteilt wird in ?die von $K$ beweisbare
+    Formeln“ und ?nicht in $K$ beweisbare Formeln“. In erster ist
     $\alpha$ und $\neg\beta$, in zweiter $\neg\alpha$ und $\beta$. Menge
     erweitern um $\gamma$ zu $K'$, wobei $\neg\gamma$ in der Menge der nicht
     beweisbaren Formeln}
@@ -3431,7 +3431,7 @@ und damit auch eine Erweiterung von $K=J_0$.
 
 Jeder Beweis in $K'$ ist endlich
 und kann deshalb nur eine endliche Anzahl von Axiomen enthalten.
-Also kann jeder Beweis auch in einer „Untertheorie“ $J_i$
+Also kann jeder Beweis auch in einer ?Untertheorie“ $J_i$
 geführt werden.
 Da alle $J_i$ konsistent sind, muss $K'$ ebenfalls konsistent sein.
 
@@ -3480,7 +3480,7 @@ alle beweisbaren Formeln wahr sind.)
 \end{bsp}
 
 \begin{defini}
-  Eine Theorie $K$ heißt T-produktiv („scape goat“, engl. Sündenbock)
+  Eine Theorie $K$ heißt T-produktiv (?scape goat“, engl. Sündenbock)
   falls für jede Formel $\alpha$ mit genau einer freien Variablen $x$ ein
   variablenfreier Term $t$ existiert mit
   \begin{gather*}
@@ -3572,7 +3572,7 @@ alle beweisbaren Formeln wahr sind.)
     \begin{itemize}
      \item Die Grundmenge $D$ besteht aus allen variablenfreien Termen,
       die in $J$ gebildet werden können.
-     \item Konstanten- und Funktionssymbole werden „durch sich selbst“
+     \item Konstanten- und Funktionssymbole werden ?durch sich selbst“
       interpretiert:
       \begin{eqnarray*}
         (a_i)^{\cM} & = & a_i \\
@@ -3811,7 +3811,7 @@ Die Gleichheitsrelation wird hier bereits als bekannt vorausgesetzt.
 Basierend auf diesen Axiomen definieren wir eine formale Theorie
 für die Zahlentheorie.
 Diese Theorie nennen wir S.
-Sie hat nur ein eingeschränktes „Vokabular“
+Sie hat nur ein eingeschränktes ?Vokabular“
 an Konstanten-, Funktions- und Prädikatensymbolen.
 
 {
@@ -3938,163 +3938,7 @@ $
 $
 
 (c)
-Wir beweisen die Formel $x=y ~ \rightarrow ~ (x+z=y+z)$
-mittels Induktion über $z$.
-
-Als Induktionsanfang zeigen wir $x=y ~ \rightarrow ~ (x+0=y+0)$ $(=\alpha(0))$.
-
-$
-\begin{array}{cll}
-(1) & x+0 = x  & \text{(S5')} \\
-(2) & y+0 = y  & \text{(S5')} \\
-(3) & x=y & \text{Hypothese} \\
-(4) & (x+0=x) \rightarrow(~x=y ~ \rightarrow ~x+0=y) & \text{Teil (c)} \\
-(5) & x=y ~ \rightarrow ~ x+0=y & \text{MP}~ 1,4 \\
-(6) & x+0=y & \text{MP}~ 3,5 \\
-(7) & x+0=y ~ \rightarrow ~ (y+0=y ~ \rightarrow ~ x+0=y+0) & \text{Teil (d)} \\
-(8) & y+0=y ~ \rightarrow ~ x+0=y+0 & \text{MP}~ 6,7 \\
-(9) & x+0 = y+0 & \text{MP}~ 2,8
-\end{array}
-$
-
-Mit dem Deduktionstheorem folgt $\Svdash \alpha(0)$.
-
-Zum Induktionsschritt wird zuerst $\alpha(z)\rightarrow\alpha(z')$ gezeigt, also
-$$
-\big(x=y ~ \rightarrow ~ (x+z=y+z)\big) ~ \rightarrow ~ \big(x=y ~ \rightarrow ~ (x+z'=y+z')\big)
-\ \ .
-$$
-Wir haben in (a), (b) und (c) bereits die Reflexivität, Symmetrie
-und Transitivität von $=$ gezeigt.
-Diese Eigenschaften benutzen wir jetzt zur Verkürzung der Beweise.
-
-$
-\begin{array}{cll}
-(1) & x=y ~ \rightarrow ~ (x+z=y+z) & \text{Hypothese $\alpha(z)$} \\
-(2) & x=y & \text{Hypothese} \\
-(3) & x+z=y+z & \text{MP}~ 1,2 \\
-(4) & x+z=y+z ~ \rightarrow ~    (x+z)'=(y+z)' & \text{(S2')} \\
-(5) & (x+z)'=(y+z)' & \text{MP}~ 3, 4 \\
-(6) &  x+z'=(x+z)' & \text{(S6')} \\
-(7) &  x+z'=(y+z)'& \text{Symm. von $=$, Trans. von $=$}~ 5,6 \\
-(8) & (y+z)'= y+z'& \text{(S6')}, \text{Symm. von $=$} \\
-(9) & x+z'=y+z' & \text{Trans. von $=$}~ 7, 8 \\
-\end{array}
-$
-
-Mit dem Deduktionstheorem folgt $\Svdash \alpha(z)\rightarrow\alpha(z')$.
-Durch Anwendung von Gen erhalten wir
-$\Svdash(\forall z ~ \alpha(z)\rightarrow\alpha(z'))$.
-Aus diesen beiden Beweisen erhalten wir
-mit (S9) $\Svdash(\forall z ~ \alpha(z))$,
-also $\Svdash(\forall z x=y ~ \rightarrow ~ x+z=y+z)$.
-Mit Regel RA4 ergibt sich daraus $\Svdash x=y ~ \rightarrow ~ x+z=y+z$.
-\end{proof}
-\end{lemma}
-
-Beweise in der Zahlentheorie laufen also wie gewohnt.
-Wie nicht anders zu erwarten, werden die Beweise schnell lang.
-
-In S gibt es keine Symbole für natürliche Zahlen außer der $0$.
-Der Nachfolger von $0'$ ist im intuitiven Verständnis die $1$.
-Wir führen die Schreibweise
-$\overline{1}$ für $0'$
-und entsprechend
-$\overline{m}$ für %% $0\underbrace'^{\cdots}'}_{\text{$m$-mal}}$
-$0\overbrace{'\raisebox{.7ex}{$\cdots$} '}^{\text{$m$-mal}}$
-ein.
-
-\begin{lemma}
-Seien $m$ und $n$ natürliche Zahlen.
-\begin{enumerate}
-\item
-Falls $m\not= n$,
-dann gilt $\Svdash \neg(\overline{m}=\overline{n})$.
-\item
-$\Svdash \overline{n+m} = \overline{n} + \overline{m}$
-\end{enumerate}
-\end{lemma}
-
-\begin{proof}
-\begin{enumerate}
-\item O.\,B.\,d.\,A.\, sei $m>n$.
-
-$
-\begin{array}{cll}
-(1) & \overline{n} = \overline{m} & \text{Hypothese} \\
-(2) & \overline{n} = \overline{m} ~\rightarrow~ \overline{n-1}=\overline{m-1} & \text{(S4')} \\
-\vdots & \vdots & \vdots \\
-(n+1) & \overline{1} = \overline{m-n+1} ~\rightarrow~ \overline{0}=\overline{m-n} & \text{(S4')} \\
-(n+2) & \overline{0}=\overline{m-n} & \text{MP} ~ (1)-(n+1) \\
-(n+3) & \neg (0=\overline{m-n}) & \text{(S3'), da $m-n>0$} \\
-(n+4) & \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n}) &
-                  \text{Konjunktionsregel}~ (n+2), (n+3) 
-\end{array}
-$
-
-Damit ist gezeigt: $\overline{n} = \overline{m} \Svdash
-            \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n})$.
-Mit der Regel Widerspruchs-Beweis folgt $\Svdash \overline{n} = \overline{m}$.
-\item
-
-\end{enumerate}
-\end{proof}
-
-
-\begin{lemma}
-Sei $t$ ein Term. Dann gilt
-\begin{enumerate}
-\item $\Svdash t\cdot\overline{1} = t$
-\item $\Svdash t + \overline{1} = t'$
-\end{enumerate}
-\end{lemma}
-
-
-
-
-Das Standard-Modell f\"ur S besteht
-aus den nat\"urlichen Zahlen als Grundmenge
-und der „intuitiven“ Interpretaion der übrigen Symbole.
-
-\begin{itemize}
-\item Grundmenge: die nat\"urlichen Zahlen 
-\item das Konstantensymbol $0$ wird durch die nat.\,Zahl $0$ interpretiert
-\item $f^1_1$ ($'$) wird durch Addition mit $1$ interpretiert
-\item $f^2_1$ und $f^2_2$ werden durch Addition und Multiplikation interpretiert
-\item $A^2_1$ wird durch die Gleichheitsrelation interpretiert
-\end{itemize}
-
-„Offensichtlich“ sind die Axiome von $\mathrm{S}$ wahr im Standard-Modell.
-
-Es gibt jedoch auch Modelle f\"ur $\mathrm{S}$ mit
-\"uberabz\"ahlbarer Grundmenge \ldots
-
-\todo{Irgendwo weiter oben einsortieren}
-
-\begin{lemma}\label{lem:9}
-  $\Svdash t=t$
-  \begin{align*}
-    (1)\quad& t+0 = t &\text{S5'}\\
-    (2)\quad& t+0 = t \rightarrow (t+0 = t \rightarrow t=t) &\text{S1}\\
-    (3)\quad& t+0 = t \rightarrow t=t &\text{MP 1,2}\\
-    (4)\quad& t=t &\text{MP 1,3}
-  \end{align*}
-\end{lemma}
-
-\begin{lemma}
-  $\Svdash t=r \rightarrow r=t$
-  \begin{align*}
-    (1)\quad& t=r &\text{Hypothese}\\
-    (2)\quad& t=r \rightarrow (t=t \rightarrow r=t)&\text{S1'}\\
-    (3)\quad& t=t \rightarrow r=t &\text{MP 1,2}\\
-    (4)\quad& t=t &\text{\autoref{lem:9}}\\
-    (5)\quad& r=t &\text{MP 3,4}
-  \end{align*}
-  Mit dem Deduktionstheorem folgt $\Svdash t=r \rightarrow r=t$.
-\end{lemma}
-
-\begin{lemma}
-  $\Svdash t=r \rightarrow t+s=r+s$ Wir beweisen $\Svdash
+Wir beweisen $\Svdash
   x_{1}=x_{2} \rightarrow x_{1}+x_{3}=x_{2}+x_{3}$ mittels Induktion über
   $x_{3}$.
   \begin{description}
@@ -4151,17 +3995,114 @@ Es gibt jedoch auch Modelle f\"ur $\mathrm{S}$ mit
          x_{2} + x_{3}')
     \end{gather*}
 
-    Bis jetzt gezeigt: $\Svdash\alpha(0)$ und $\Svdash (\alpha
-    x_{3}\colon \alpha(x_{3}) \rightarrow \alpha(x_{3}')$
-    \begin{align*}
+    Bis jetzt gezeigt: $\Svdash\alpha(0)$ und $\Svdash (\forall 
+    x_{3}\colon \alpha(x_{3}) \rightarrow \alpha(x_{3}'))$
+
+$
+    \begin{array}{ll}
       \Svdash \alpha(0) \rightarrow ((\forall x_{3}\colon
          \alpha(x_{3}) \rightarrow \alpha(x_{3}')) \rightarrow (\forall
-         x_{3}\colon \alpha(x_{3}))) \text{S9}\\
-      \Svdash \forall x_{3}\colon \alpha(x_{3})\\
-      \Svdash \alpha(x_{3}) &\text{RA4}
-    \end{align*}
+         x_{3}\colon \alpha(x_{3}))) & \text{S9}\\
+      \Svdash (\forall x_{3}\colon
+         \alpha(x_{3}) \rightarrow \alpha(x_{3}')) \rightarrow (\forall
+         x_{3}\colon \alpha(x_{3})) & \text{mit MP aus S9 und $\alpha(0)$}\\
+      \Svdash \forall x_{3}\colon \alpha(x_{3})&\text{mit MP aus $(\forall x_3~\alpha(x_)\rightarrow\alpha(x_3'))$} \\
+      \Svdash \alpha(x_{3}) & \text{RA4}
+    \end{array}
+$
+
   \end{description}
+
+\end{proof}
 \end{lemma}
+
+Beweise in der Zahlentheorie laufen also wie gewohnt.
+Wie nicht anders zu erwarten, werden die Beweise schnell lang.
+
+In $\mathrm{S}$ gibt es keine Symbole für natürliche Zahlen außer der $0$.
+Der Nachfolger von $0'$ ist im intuitiven Verständnis die $1$.
+Wir führen die Schreibweise
+$\overline{1}$ für $0'$
+und entsprechend
+$\overline{m}$ für %% $0\underbrace'^{\cdots}'}_{\text{$m$-mal}}$
+$0\overbrace{'\raisebox{.7ex}{$\cdots$} '}^{\text{$m$-mal}}$
+ein.
+
+\begin{lemma}
+Seien $m$ und $n$ natürliche Zahlen.
+\begin{enumerate}
+\item
+Falls $m\not= n$,
+dann gilt $\Svdash \neg(\overline{m}=\overline{n})$.
+\item
+$\Svdash \overline{n+m} = \overline{n} + \overline{m}$
+\end{enumerate}
+\end{lemma}
+
+\begin{proof}
+\begin{enumerate}
+\item O.\,B.\,d.\,A.\, sei $m>n$.
+
+$
+\begin{array}{cll}
+(1) & \overline{n} = \overline{m} & \text{Hypothese} \\
+(2) & \overline{n} = \overline{m} ~\rightarrow~ \overline{n-1}=\overline{m-1} & \text{(S4')} \\
+\vdots & \vdots & \vdots \\
+(n+1) & \overline{1} = \overline{m-n+1} ~\rightarrow~ \overline{0}=\overline{m-n} & \text{(S4')} \\
+(n+2) & \overline{0}=\overline{m-n} & \text{MP} ~ (1)-(n+1) \\
+(n+3) & \neg (0=\overline{m-n}) & \text{(S3'), da $m-n>0$} \\
+(n+4) & \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n}) &
+                  \text{Konjunktionsregel}~ (n+2), (n+3) 
+\end{array}
+$
+
+Damit ist gezeigt: $\overline{n} = \overline{m} \Svdash
+            \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n})$.
+Mit der Regel Widerspruchs-Beweis folgt $\Svdash \overline{n} = \overline{m}$.
+\item
+
+\end{enumerate}
+\end{proof}
+
+
+\begin{lemma}
+Sei $t$ ein Term. Dann gilt
+\begin{enumerate}
+\item $\Svdash t\cdot\overline{1} = t$
+\item $\Svdash t + \overline{1} = t'$
+\end{enumerate}
+\end{lemma}
+
+
+Weitere abkürzende Schreibweisen:
+
+\begin{tabular}{r@{~\ldots~}l}
+  $t<s$ & für $(\exists w\colon w\ne0 \wedge t+w=s)$\\
+  $t\leq s$ & für $t<s \vee t=s$\\
+  $t>s$ & für $s<t$\\
+  $t\geq s$ & für $s\leq t$\\
+  $t\not< s$ & für $\neg t<s$
+\end{tabular}
+
+
+
+
+Das Standard-Modell f\"ur $\mathrm{S}$ besteht
+aus den nat\"urlichen Zahlen als Grundmenge
+und der \glqq intuitiven\grqq\xspace Interpretation der übrigen Symbole.
+
+\begin{itemize}
+\item Grundmenge: die nat\"urlichen Zahlen 
+\item das Konstantensymbol $0$ wird durch die nat.\,Zahl $0$ interpretiert
+\item $f^1_1$ ($'$) wird durch Addition mit $1$ interpretiert
+\item $f^2_1$ und $f^2_2$ werden durch Addition und Multiplikation interpretiert
+\item $A^2_1$ wird durch die Gleichheitsrelation interpretiert
+\end{itemize}
+
+\glqq Offensichtlich\grqq\xspace sind die Axiome von $\mathrm{S}$ wahr im Standard-Modell.
+
+Es gibt jedoch auch Modelle f\"ur $\mathrm{S}$ mit
+\"uberabz\"ahlbarer Grundmenge \ldots
 
 Versuche ein Modell $\mathcal{M}$ für $\mathrm{S}$ zu finden, das nicht
 die natürlichen Zahlen als Grundmenge hat. Erweitern wir die Grundmenge
@@ -4203,17 +4144,71 @@ natürlichen Zahlen. Versuch gescheitert.
   von $\N$ interpretieren.
 \end{satz}
 
-\todo{weiter oben einsortieren:}
+\subsection{Relationen und Funktionen auf den natürlichen Zahlen}
 
-Weiter abkürzende Schreibweisen:
-\begin{tabular}{r@{~\ldots~}l}
-  $t<s$ & für $(\exists w\colon w\ne0 \wedge t+w=s)$\\
-  $t\leq s$ & für $t<s \vee t=s$\\
-  $t>s$ & für $s<t$\\
-  $t\geq s$ & für $s\leq t$\\
-  $t\not< s$ & für $\neg t<s$
-\end{tabular}
+Eine $k$-stellige Relation auf den natürlichen Zahlen
+ist eine Menge $R\subseteq\N^k$.
+Eine $k$-stellige Funktion auf den natürlichen Zahlen
+ist eine Funktion $f:\N^k\rightarrow \N$.
 
+\begin{defini}
+Eine $k$-stellige Relation $R$ auf den naürlichen Zahlen
+heißt \emph{repräsentierbar in $\mathrm{S}$},
+falls es eine Formel $\alpha$ in $\mathrm{S}$ 
+mit folgenden Eigenschaften gibt.
+\begin{enumerate}
+\item $\alpha$ hat die freien Variablen $x_1,\ldots,x_k$, und
+\item für alle $n_1,\ldots,n_k\in\N$ gilt:
+\begin{itemize}
+\item[(1)] falls $(n_1,\ldots,n_k)\in R$, 
+        dann $\Svdash \alpha[x_1/\overline{n_1},\ldots,x_k/\overline{n_k}]$
+\item[(2)] falls $(n_1,\ldots,n_k)\not\in R$, 
+        dann $\Svdash \neg \alpha[x_1/\overline{n_1},\ldots,x_k/\overline{n_k}]$
+\end{itemize}
+\end{enumerate}
+\end{defini}
+
+Ein Beispiel für eine in $\mathrm{S}$ repräsentierbare Relation
+ist die Gleichheitsrelation $=$.
+Sie wird repräsentiert durch die Formel $x_1=x_2$ (nennen wir $\alpha_{=}$).
+Wir haben bereits gesehen, dass folgende Eigenschaften 
+für alle natürlichen Zahlen $n$ und $m$ gelten.
+\begin{itemize}
+\item[(1)] falls $n=m$, dann gilt $\Svdash\overline{n}=\overline{m}$
+           (also $\Svdash \alpha_{=}[x_1/\overline{n}, x_2/\overline{m}]$)
+\item[(2)] falls $n\not=m$, dann gilt $\Svdash\neg(\overline{n}=\overline{m})$
+           (also $\Svdash \neg \alpha_{=}[x_1/\overline{n}, x_2/\overline{m}]$)
+\end{itemize}
+
+\todo{weiteres Beispiel}
+
+\begin{defini}
+Eine $k$-stellige Funktion $f$ auf den naürlichen Zahlen
+heißt \emph{repräsentierbar in $\mathrm{S}$},
+falls es eine Formel $\alpha$ in $\mathrm{S}$ 
+mit folgenden Eigenschaften gibt.
+\begin{enumerate}
+\item $\alpha$ hat die freien Variablen $x_1,\ldots,x_k,x_{k+1}$, und
+\item für alle $n_1,\ldots,n_k,n_{k+1}\in\N$ gilt:
+\begin{itemize}
+\item[(1)] falls $f(n_1,\ldots,n_k)=n_{k+1}$, 
+    dann $\Svdash \alpha[x_1/\overline{n_1},\ldots,x_k/\overline{n_k},x_{k+1}/\overline{n_{k+1}}]$, und
+\item[(2)] $\Svdash (\exists_1 x_{k+1}~ \alpha[x_1/\overline{n_1},\ldots,x_k/\overline{n_k}])$
+
+$(\exists_1 x ~ \alpha)$ ist abkürzende Schreibweise für
+$(\exists x~\alpha) \wedge (\forall x~ \forall y ~ (\alpha\wedge\alpha[x/y])\rightarrow x=y)$.
+Es wird ausgedrückt, dass \it{genau ein $x$} existiert, das die in $\alpha$ beschriebenen
+Eigenschaften besitzt.
+\end{itemize}
+\end{enumerate}
+$f$ heißt \emph{streng repräsentierbar}, falls Eigenschaft (2) 
+durch die folgende Eigenschaft ersetzt werden kann:
+\begin{itemize}
+\item[(2')] $\Svdash (\exists_1 x_{k+1}~ \alpha)$
+\end{itemize}
+\end{defini}
+
+\todo{Nullfunktion, Nachfolgerfunktion, Projektionsfunktion sind repräsentierbar}
 
 
 \section{Primitiv rekursive Funktionen}
@@ -5218,7 +5213,7 @@ Sind die folgenden Argumentationen logisch korrekt?
   eine Tautologie (\autoref{satz:1}). Dann ist $\neg\alpha$ keine
   Tautologie. Folglich gilt nicht $\Lvdash\neg\alpha$.
 
-  Aus der Negation von „Wenn $\Lvdash\alpha$ ein Theorem
+  Aus der Negation von ?Wenn $\Lvdash\alpha$ ein Theorem
   ist, dann ist $\alpha$ eine Tautologie“ folgt: Wenn $\alpha$ keine
   Tautologie ist, dann gilt nicht $\Lvdash\alpha$. Wenn
   $\neg\alpha$ also kein Theorem ist, dann ist $\alpha$ kein Theorem
@@ -5349,11 +5344,11 @@ Was bedeuten die Formeln und den angegebenene Interpretationen?
 \begin{enumerate}
  \item $(\exists n A_{1}^{2}(f_{1}^{2}(x,u), y) \wedge (\exists v
   A_{1}^{2}(f_{1}^{2}(x,v),z))$ auf der Grundmenge $\N$ und $A_{1}^{2}$
-  ist die Gleichheit „$=$“ und $f_{1}^{2}$ die Multiplikation
+  ist die Gleichheit ?$=$“ und $f_{1}^{2}$ die Multiplikation
   ($u,v,x,y,z$ sind Variablensymbole)
 
   $\exists u\in\N\colon x\cdot u=y \wedge \exists v\in\N\colon x\cdot
-  v=z$. Das entspricht der Aussage „$x$ ist gemeinsamer Teiler von $y$
+  v=z$. Das entspricht der Aussage ?$x$ ist gemeinsamer Teiler von $y$
   und $z$“.
 
  \item $\forall y( (\exists z A_{1}^{2}(f_{1}^{2}(y,z),x)) \rightarrow
@@ -5361,8 +5356,8 @@ Was bedeuten die Formeln und den angegebenene Interpretationen?
   $a=1$
 
   $\forall y\in\N\colon (\exists z\in\N\colon y\cdot z=x \rightarrow)
-  \rightarrow (y=1 \vee y=x)$. Das bedeutet „$y$ ist Teiler von $x$
-  $\rightarrow$ $(y=1 \vee y=x)$.“ Dies wiederum bedeutet „$x$ ist eine
+  \rightarrow (y=1 \vee y=x)$. Das bedeutet ?$y$ ist Teiler von $x$
+  $\rightarrow$ $(y=1 \vee y=x)$.“ Dies wiederum bedeutet ?$x$ ist eine
   Primzahl.“
 \end{enumerate}
 
@@ -5376,7 +5371,7 @@ folgende Bedeutung hat.
     T(x, a) \wedge T(x,b) \wedge (\forall y\colon T(y,a) \wedge T(y, b)
        \wedge y\leq x)
   \end{gather*}
-  mit $T(\alpha,\beta)$ als „$\alpha$ teilt $\beta$“.
+  mit $T(\alpha,\beta)$ als ?$\alpha$ teilt $\beta$“.
 
  \item Es gibt unendlich viele Primzahlen.
 
@@ -5384,7 +5379,7 @@ folgende Bedeutung hat.
     \neg \big( \exists u\colon P(u) \wedge (\forall x\colon P(x) \wedge x
        < u) \big)
   \end{gather*}
-  mit $P(\alpha)$ als „$\alpha$ ist prim“.
+  mit $P(\alpha)$ als ?$\alpha$ ist prim“.
 
   oder: $P(2) \wedge \forall x \exists y (P(y) \wedge A_{1}^{2}(x,y))$
   mit $P(\alpha)$ als $\alpha$ ist prim und $A_{1}^{2}(\alpha,\beta)$ als
@@ -5753,7 +5748,7 @@ Bestandteilen von $\alpha$
 \end{gather*}
 und $(f)^{\mathcal{M}}(t) = f(t)$ für jedes $t$ in der Grundmenge.
 
-„Terme werden durch sich selbst interpretiert.“
+?Terme werden durch sich selbst interpretiert.“
 
 [$(A)^{\mathcal{M}} = \{x,y\}, (B)^{\mathcal{M}} = \emptyset$.]
 Prädikatensymbole werden entsprechend der Belegung der aussagenlogischen
